Add personal updates for week of 2022-05-23 to 2022-05-29

--- a/personal-issues/880.md
+++ b/personal-issues/880.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2022-05-23
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,15 @@ projects:
 milestone:	
 number:	880
 --
+## Personal finances, income and taxes
+
+- [x] ~30 minutes: Review finances including India-side taxes
+
 ## Personal chores
 
 - [x] ~7 minutes: Add summaries for weekend
+- [x] ~30 minutes: After investigating options for offline issues download, ultimately go with using `gh` to download the personal daily update issues and push to the repo https://github.com/vipulnaik/daily-updates/commit/e9b1ff94c82b22aa350e4bb5c1f785f9557f1b92 
+
+## Other activities
+
+- [x] ~10 minutes: Chat with a work colleague in the recesses of a work meeting
