Add personal issues for week of 2022-08-08 to 2022-08-14 plus pull in a fix for 2022-08-04

--- a/personal-issues/949.md
+++ b/personal-issues/949.md
@@ -17,4 +17,5 @@ number:	949
 - [x] ~8 minutes: Peas prep
 - [x] ~10 minutes: Look into wheel end coming off of chair, order new chair 
 - [x] ~2 hours: Slightly-abridged meal prep 
+- [x] ~15 minutes: Regular laundry 
 - [x] ~30 minutes: Walgreens trip to buy toiletries https://github.com/vipulnaik/diet-exercise-health/commit/3c222dbe9254b84f37fab9f9a40575039d31f35f 
