Add summaries for week of 2022-08-29 to 2022-09-04 and fetch latest personal issues

--- a/personal-issues/969.md
+++ b/personal-issues/969.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2022-08-30
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -13,5 +13,14 @@ number:	969
 ### Timelines wiki
 
 - [x] ~5 minutes: Small update to timeline of AI safety https://github.com/vipulnaik/working-drafts/commit/20a1439d8a098d16b199ddb126a424a99f56a309
-- [x] ~1 hour: Add inclusion criteria page https://github.com/vipulnaik/working-drafts/commit/999fb6f4d4223c6dff5becc29ef619ef3ca23224 and do some reading and thinking about related topics 
+- [x] ~1 hour 5 minutes: Add inclusion criteria page https://github.com/vipulnaik/working-drafts/commit/999fb6f4d4223c6dff5becc29ef619ef3ca23224 and do some reading and thinking about related topics; also share thoughts with @riceissa and @sebastiansanchez123
+- [x] ~7 minutes: Add a row to timeline of GiveWell https://github.com/vipulnaik/working-drafts/commit/df5cd8895d3c94d7a9a965598807a17610df4560 
 
+### Blog posts and comments
+
+- [x] ~7 minutes: Start drafting a comment https://github.com/vipulnaik/working-drafts/commit/d61db95a7fe94d35cd3628acba6e0a4f0d6d0ed4
+- [x] ~18 minutes: Start drafting a post https://github.com/vipulnaik/working-drafts/commit/a3e4d9056903583c3b9cd7aa1d7f5534131c7198 
+
+## Personal chores
+
+- [x] ~20 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/c94959718bd6a7eb33a88a84c8359d08e572c7b4
