Add summaries for week of 2022-09-05 to 2022-09-11 and fetch latest personal issues

--- a/personal-issues/975.md
+++ b/personal-issues/975.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2022-09-05
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -15,6 +15,18 @@ number:	975
 - [x] ~12 minutes: Discuss next steps with @sebastiansanchez123
 - [x] ~2 minutes: Add to what the timeline is still missing for timeline of Our World in Data
 - [x] ~3 minutes: Small update to timeline of GiveWell: add timeline links https://github.com/vipulnaik/working-drafts/commit/5ef07ce469a42323805d30df449a178b113e44ce
+
+### Job retrospective
+
+- [x] ~35 minutes: Draft a comparative retrospective of academia and tech job https://github.com/vipulnaik/working-drafts/blob/master/blog/comparative-retrospective-of-my-life-in-academia-and-tech.md
+
+## Personal chores
+
+- [x] ~20 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/01ccd37e16af8a14bffddf19c545bdf3eaf91973
+- [x] ~10 minutes: Do some spot checks on daily updates time spent and document guidelines for how to do the summations 
+- [x] ~30 minutes: Finish trash/composting/recycling work
+- [x] ~5 minutes: Investigate and document updated findings about white residue that may be due to hard water
+- [x] ~5 minutes: Update standing plan https://github.com/vipulnaik/daily-updates/commit/71050e1509cdeb00811d2a4155fa8d52108d8dd3 
 
 ## Other activities
 
