Add summaries for week of 2022-09-12 to 2022-09-18 and fetch latest personal issues

--- a/personal-issues/982.md
+++ b/personal-issues/982.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2022-09-12
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -12,4 +12,15 @@ number:	982
 
 ### Donations list website (DLW)
 
-- [ ] ~12 minutes so far: Review some feedback on DLW; make updates to about page https://github.com/vipulnaik/donations/commit/b0c958c39d4920ccd92a900f08319890d3ae4ab9 https://github.com/vipulnaik/donations/commit/071c66b934aedb6d40ed28a3dcf36a138c1b0c0f
+- [x] ~12 minutes: Review some feedback on DLW; make updates to about page https://github.com/vipulnaik/donations/commit/b0c958c39d4920ccd92a900f08319890d3ae4ab9 https://github.com/vipulnaik/donations/commit/071c66b934aedb6d40ed28a3dcf36a138c1b0c0f
+
+### Devops streamlining
+
+- [x] ~5 minutes: Follow up on test machine that I had set up yesterday
+- [x] ~5 minutes: Deal with some S3 access/permissions stuff 
+- [x] ~1 hour 50 minutes: Continue with devops setup 
+
+## Personal chores
+
+- [x] ~20 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/6aeedd42784daac6c60cf544192a2f3ce47a592a
+- [x] ~1 hour 50 minutes: Meal prep
