Add summaries for week of 2023-01-02 to 2023-01-08 and fetch latest personal issues

--- a/personal-issues/1091.md
+++ b/personal-issues/1091.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2023-01-03
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -31,4 +31,11 @@ number:	1091
 ##  Personal chores
 
 - [x] ~1 hour 10 minutes: Bank trip + get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/f525b6306c08dd5fa3a6cd87ec3793b26949b3b3
-- [x] ~10 minutes: Do some disk cleanup and record disk usage; also restart machine 
+- [x] ~10 minutes: Do some disk cleanup and record disk usage; also restart machine
+- [x] ~25 minutes: Add summaries for past week, month, and year https://github.com/vipulnaik/daily-updates/commit/ee6731ef2540a75b3b19809417868832e8c68c5e
+- [x] ~20 minutes: Regular laundry, including pre-treatment for sweatshirt and extra trip for missed sock
+- [x] ~4 minutes: Take out trash and compostables
+
+## Other activities
+
+- [x] ~5 minutes: Edit and share a document
