Add summaries for week of 2023-01-23 to 2023-01-29; update two personal issues

--- a/personal-issues/1117.md
+++ b/personal-issues/1117.md
@@ -26,4 +26,5 @@ number:	1117
 
 - [x] ~9 minutes: Reply to some messages
 - [x] ~7 minutes: Review a document
-- [x] ~15 minutes: Send an email 
+- [x] ~15 minutes: Send an email
+- Not time-tracked: Pick up an online order from Mehak Indian Cuisine https://github.com/vipulnaik/diet-exercise-health/commit/9b7f158144f024abae41eb1aa1e1185e9b03b9f6 
