--- a/personal-issues/1125.md
+++ b/personal-issues/1125.md
@@ -25,6 +25,11 @@ number:	1125
 ## Personal chores
 
 - [x] ~15 minutes: Do a password recall drill for passwords I had been confused about, plus some placebos thrown in
+- [x] ~15 minutes: Add summaries for week of 2023-01-16 to 2023-01-22 https://github.com/vipulnaik/daily-updates/commit/d0bafcf3590ef09b87586c35d8c035364d1b586d 
+
+## Other activities
+
+- Not time-tracked: Pick up an online order from Mehak Indian Cuisine https://github.com/vipulnaik/diet-exercise-health/commit/9b7f158144f024abae41eb1aa1e1185e9b03b9f6
 
 ## Arena Group transition work
 
