Add summaries for week of 2023-01-30 to 2023-02-05; update two personal issues and add a new one

--- a/personal-issues/1125.md
+++ b/personal-issues/1125.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2023-02-10
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -25,7 +25,8 @@ number:	1125
 ## Personal chores
 
 - [x] ~15 minutes: Do a password recall drill for passwords I had been confused about, plus some placebos thrown in
-- [x] ~15 minutes: Add summaries for week of 2023-01-16 to 2023-01-22 https://github.com/vipulnaik/daily-updates/commit/d0bafcf3590ef09b87586c35d8c035364d1b586d 
+- [x] ~15 minutes: Add summaries for week of 2023-01-16 to 2023-01-22 https://github.com/vipulnaik/daily-updates/commit/d0bafcf3590ef09b87586c35d8c035364d1b586d
+- [x] ~15 minutes: Add summaries for week of 2023-01-23 to 2023-01-29 https://github.com/vipulnaik/daily-updates/commit/555f76a8f50c2cdeb3e2a5dff61142d52a4527a5
 
 ## Other activities
 
