Add summaries for week of 2023-02-06 to 2023-02-12 and fetch latest personal issues

--- a/personal-issues/1126.md
+++ b/personal-issues/1126.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2023-02-11
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -11,4 +11,6 @@ number:	1126
 ## Personal chores
 
 - [x] ~9 minutes: Write a zsh history deduplication script and add instructions related to zsh history
-- [x] ~3 minutes: Add additional keyboards 
+- [x] ~6 minutes: Add additional keyboards and disable a keyboard-switching shortcut
+- [x] ~15 minutes: Add summaries for week of 2023-01-30 to 2023-02-05 https://github.com/vipulnaik/daily-updates/commit/b926a65a08a80c3086c79fa9ab28d6b11907dc87
+- [x] ~3 minutes: Back up my browsing history 
