Fetch latest personal issues

--- a/personal-issues/1131.md
+++ b/personal-issues/1131.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2023-02-17
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,19 @@ projects:
 milestone:	
 number:	1131
 --
+## Personal projects
+
+### Timelines wiki
+
+- [x] ~1 hour: Review timeline of encyclopedias and share feedback
+- [x] ~10 minutes: Review timeline of web search engines and share feedback
+
+## Personal chores
+
+- [x] ~5 minutes: Change a caster wheel for my office chair
+- [x] ~10 minutes: Update job details https://github.com/vipulnaik/working-drafts/commit/22e9b1ea697caf71c42199f56e29717b1c78fac2 https://github.com/vipulnaik/daily-updates/commit/968009a84a1f3b1aec30b7ae6d6f8273d3f38b82
+- [x] ~15 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/36c8139e5872ef381a24bbfae68d371c5b1238d4 
+
 ## Arena Group transition work
 
 - [x] ~30 minutes: Do some planning; list out various items
