Add summaries for 2023-03-30 to 2023-04-02; add week and month summary; fetch latest personal issues

--- a/personal-issues/1167.md
+++ b/personal-issues/1167.md
@@ -1,5 +1,5 @@
 title:	Vipul Thursday checklist | 2023-03-30
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -11,3 +11,9 @@ number:	1167
 ## Personal chores
 
 - [x] ~1 hour 45 minutes: Meal prep -- somewhat shorter than usual due to fewer tomatoes
+- [x] ~11 minutes: Add summaries for past few days https://github.com/vipulnaik/daily-updates/commit/1ee008e78259b4633f6d4d0ad92e6d75b3c18235
+- [x] ~15 minutes: Go through my accumulated mail
+- [x] ~15 minutes: Do emergency contact fire drill 
+- [x] ~15 minutes: Do account recovery fire drill
+- [x] ~30 minutes: Do initial portion of password recall drill
+- [x] ~5 minutes: Set up 2-factor for one of my logins
