Fix bucket for Wikipedia Views month change; fetch latest personal issues

--- a/personal-issues/1168.md
+++ b/personal-issues/1168.md
@@ -8,6 +8,10 @@ projects:
 milestone:	
 number:	1168
 --
+## Personal projects
+
+- [x] ~3 minutes: Switch month for Wikipedia Views
+
 ## Personal chores
 
 - [x] ~3 minutes: Update an expired password
@@ -15,4 +19,4 @@ number:	1168
 - [x] ~15 minutes: Do some planning work related to Walgreens shopping list
 - [x] ~45 minutes: Finish password recall drill log and 2-factor recovery drill log
 - [x] ~12 minutes: Execute on more cleanup items that are part of the month change checklist items
-- [x] ~3 minutes: Switch month for Wikipedia Views 
+ 
