Add summaries for week of 2023-04-03 to 2023-04-09 and fetch latest personal issues

--- a/personal-issues/1172.md
+++ b/personal-issues/1172.md
@@ -1,5 +1,5 @@
 title:	Vipul Wednesday checklist | 2023-04-05
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,4 +10,5 @@ number:	1172
 --
 ## Personal chores
 
-- [x] ~10 minutes: Add summaries for past few days, week + month summary, latest issues https://github.com/vipulnaik/daily-updates/commit/cebdc712fd61de8c87d247648e9faa53ce1b380d
+- [x] ~10 minutes: Add summaries for past few days, week + month summary, latest issues https://github.com/vipulnaik/daily-updates/commit/cebdc712fd61de8c87d247648e9faa53ce1b380d; later, make a fix https://github.com/vipulnaik/daily-updates/commit/6e6501c62e5da058e7eed2edcb89d0af00ef9144
+- [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/d56d30ac57084b87eb6d6265c30b4272f3578571 
