Add summaries for week of 2023-04-10 to 2023-04-16 and fetch latest personal issues

--- a/personal-issues/1180.md
+++ b/personal-issues/1180.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2023-04-15
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -11,6 +11,10 @@ number:	1180
 ## Personal finances, income and taxes
 
 - [x] ~20 minutes: Save copies of recent credit reports https://github.com/vipulnaik/personal-finances/commit/0c524377217852da8d47a8939d24ffa8668a18a5
+
+## Personal chores
+
+- [x] ~15 minutes: Add summaries of past week https://github.com/vipulnaik/daily-updates/commit/f8d429e04900383676adb3bc10762a0b35b6fede
 
 ## House chores
 
