--- a/personal-issues/1187.md
+++ b/personal-issues/1187.md
@@ -1,4 +1,4 @@
-title:	Vipul Thursday checklist | 2023-04-20
+title:	Vipul Saturday checklist | 2023-04-22
 state:	CLOSED
 author:	vipulnaik
 labels:	
@@ -6,8 +6,8 @@ comments:	0
 assignees:	vipulnaik
 projects:	
 milestone:	
-number:	1185
+number:	1187
 --
 ## Personal chores
 
-- [x] ~1 hour 50 minutes: Meal prep
+- [x] ~15 minutes: Heavy laundry
