Record change in bucket for an item in an old daily update issue

--- a/personal-issues/1115.md
+++ b/personal-issues/1115.md
@@ -10,8 +10,11 @@ number:	1115
 --
 ## Personal chores
 
-- [x] ~10 minutes: Try (and pause effort) to disable older CO alarm
 - [x] ~3 minutes: Sweep the floor (living room area)
+
+## House chores
+
+- [x] ~10 minutes
 
 ## Other activities
 
