Add summaries for week of 2023-04-24 to 2023-04-30 and fetch latest personal issues

--- a/personal-issues/1191.md
+++ b/personal-issues/1191.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2023-04-28
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -11,4 +11,6 @@ number:	1191
 ## Personal chores
 
 - [x] ~1 hour 10 minutes: Get groceries from Trader Joe's and supplements from Walgreens https://github.com/vipulnaik/diet-exercise-health/commit/a8d2f284817aea4053f1290292a1d661498aa20a
-- [x] ~3 minutes: Take out trash and compostables 
+- [x] ~3 minutes: Take out trash and compostables
+- [x] ~15 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/33c1bc5a11c9fe0aa873c215a827847d81342c97
+- [x] ~30 minutes: Regular laundry, including additional trips due to washer being busy, and one additional trip to pick up dry clothes because the load was too big for a single trip   
