Pull in a change to Saturday's issue; fetch latest personal issues

--- a/personal-issues/1192.md
+++ b/personal-issues/1192.md
@@ -8,6 +8,10 @@ projects:
 milestone:	
 number:	1192
 --
+## Personal chores
+
+- [x] ~7 minutes: Beans prep
+
 ## Other activities
 
 - [x] ~2 hours: Get the entertainment and self-education portal data up-to-date https://github.com/vipulnaik/entertainment-and-self-education/commits?since=2023-04-29&until=2023-04-30
