Add summaries for week of 2023-05-08 to 2023-05-14 and fetch latest personal issues

--- a/personal-issues/1199.md
+++ b/personal-issues/1199.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2023-05-08
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,10 +10,20 @@ number:	1199
 --
 ## Personal projects
 
+### General
+
+- [x] ~4 minutes: Share plan with @riceissa and @sebastiansanchez123
+
 ### Org Watch
 
 - [x] ~3 minutes: Create issues riceissa/aiwatch#137 and riceissa/aiwatch#138
 
+## Personal chores
+
+- [x] ~15 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/3cc0deec84ddfab2fb19b7bfed4beb6bc7f1562b
+- [x] ~10 minutes: Do some cleaning around the house
+
 ## Other activities
 
 - [x] ~10 minutes: Play the games at https://www.quantifiedintuitions.org/estimation-game
+- [x] ~10 minutes: Some text chatting
