Add summaries for week of 2023-05-15 to 2023-05-21 and fetch latest personal issues

--- a/personal-issues/1210.md
+++ b/personal-issues/1210.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2023-05-20
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -23,4 +23,5 @@ number:	1210
 
 - [x] ~9 minutes: Update a couple of passwords and log in again on a device
 - [x] ~6 minutes: Update my wi-fi password and reconnect to wi-fi on all devices
-- [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/bf0a77ff7d523d1fad6b187d6dfa8ef4cb52053b 
+- [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/bf0a77ff7d523d1fad6b187d6dfa8ef4cb52053b
+- [x] ~15 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/eeb633869e7a12a6cba4ab2da11e7342a7204516
