Add summaries for week of 2023-05-22 to 2023-05-28 and fetch latest personal issues

--- a/personal-issues/1213.md
+++ b/personal-issues/1213.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2023-05-23
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,13 +8,26 @@ projects:
 milestone:	
 number:	1213
 --
+## Personal projects
+
+### Devops streamlining / backups
+
+- [x] ~3 minutes: Rerun an aws s3 cp command that had erred out
+
 ## Personal chores
 
 - [x] ~3 minutes: Do password recall for recently changed passwords (by logging in to the updated accounts)
 - [x] ~10 minutes: Fridge cleaning
 - [x] ~6 minutes: Record disk usage after clearing out Equator-related content
+- [x] ~15 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/bd72fcfb174d5368e511ee5ae22c9e3b69246cd3 
 
 ## Other activities
 
-- [x] ~5 minutes: Reply to an email
-- [x] ~10 minutes: Brief call 
+- [x] ~10 minutes: Reply in an email thread (twice)
+- [x] ~10 minutes: Brief call
+
+## Equator purge work
+
+(I started an issue in the Equator daily-updates repo, but lost GitHub access as part of the purge, so putting the entire time spent in the personal daily update issue)
+
+- [x] ~30 minutes: Continue work on Equator purge
