--- a/personal-issues/1220.md
+++ b/personal-issues/1220.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2023-05-30
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,13 @@ projects:
 milestone:	
 number:	1220
 --
+## Personal projects
+
+### Devops streamlining
+
+- [x] ~45 minutes: Add size checks to code backup scripts
+- [x] ~1 hour: Add long-term backup scripts
+
 ## Personal finances, income and taxes
 
 - [x] ~5 minutes: Add recent credit reports https://github.com/vipulnaik/personal-finances/commit/e7d5056f31cc254694581313a19f6ba1daf2df37
@@ -15,4 +22,5 @@ number:	1220
 ## Personal chores
 
 - [x] ~5 minutes: Update sample purge list based on recent experience with Equator
-- [x] ~30 minutes: Expand the list of steps to take before any international trip 
+- [x] ~30 minutes: Expand the list of steps to take before any international trip
+- [x] ~15 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/9447ac345162914c8007d68f8eb2c7ffad72c5a7 
