Add summaries for week of 2023-06-12 to 2023-06-18 and fetch latest personal issues

--- a/personal-issues/1237.md
+++ b/personal-issues/1237.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2023-06-16
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,6 +10,10 @@ number:	1237
 --
 ## Personal projects
 
+### Devops streamlining
+
+- [x] ~1 hour 30 minutes: Make some fixes to scripts; continue migrating sites
+
 ### Tech tips (SQL, git, etc.)
 
 - [x] ~53 minutes: Meet with @sebastiansanchez123 to go over tech tips
@@ -17,3 +21,8 @@ number:	1237
 ## Personal chores
 
 - [x] ~10 minutes: Update checklists and add tolerances
+- [x] ~15 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/6c045e86e74f77ebfadd0f61b2ddc8c0e438240a
+- [x] ~20 minutes: Execute on emergency contact fire drill
+- [x] ~20 minutes: Execute on account recovery fire drill and a few other related items
+- [x] ~3 minutes: Activate 2-factor for an account
+- [x] ~55 minutes: Potatoes prep (slightly longer than usual because of more, smaller potatoes than usual incurring more prep time) 
