Add summaries for week of 2023-06-26 to 2023-07-02 and fetch latest personal issues

--- a/personal-issues/1248.md
+++ b/personal-issues/1248.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2023-06-27
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -17,3 +17,7 @@ number:	1248
 ### AI Watch / Org Watch
 
 - [x] ~3 minutes: Coordinate a refresh
+
+## Personal chores
+
+- [x] ~28 minutes: Add summaries for past two weeks https://github.com/vipulnaik/daily-updates/commit/673806bfc7ec47ab530bf2396ce6b353af7f5d64 https://github.com/vipulnaik/daily-updates/commit/4620948bfb478265a08503e455823e9ce33c3a07
