Add summaries for week of 2023-07-10 to 2023-07-16 and fetch latest personal issues

--- a/personal-issues/1262.md
+++ b/personal-issues/1262.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2023-07-11
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -22,3 +22,6 @@ number:	1262
 ## Personal chores
 
 - [x] ~10 minutes: Continue figuring out and executing on some stuff related to address changes
+- [x] ~15 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/d35bdbb4de6101bcdd43b6f7ce4bb98b28baf160
+- [x] ~8 minutes: Continue updating https://github.com/vipulnaik/diet-exercise-health/blob/master/notes/2023-07-05-wisdom-tooth-removal-left-side.md and taking related actions 
+- [x] ~1 hour: Unusual combination meal prep (potatoes, carrots, spinach, 1 tomato)
