--- a/personal-issues/1281.md
+++ b/personal-issues/1281.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2023-08-01
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,8 +8,36 @@ projects:
 milestone:	
 number:	1281
 --
+## Personal projects
+
+### Wikipedia Views
+
+- [x] ~3 minutes: Switch month for Wikipedia Views
+
+### Timelines wiki / contract work
+
+- [x] ~15 minutes: Review timeline of OpenAI and share feedback on it on the [talk page](https://timelines.issarice.com/wiki/Talk:Timeline_of_OpenAI#Review_by_Vipul_on_2023-08-01)
+
+### Contract work for Vipul Naik
+
+- [x] ~15 minutes: Add July 2023 payments due to @sebastiansanchez123 https://github.com/vipulnaik/contractwork/commit/c9f5bd72939176b30a89fe5244d1808209a350cb and send an email update
+
+### Backups
+
+- [x] ~3 minutes: Take care of monthly backups
+
 ## Personal finances, income and taxes
 
 - [x] ~15 minutes: Create a SQL table for hard credit checks so that it's easier to reconcile with my credit score history https://github.com/vipulnaik/personal-finances/commit/5324be6b2256d445a82215af002332f533341d47
-- [x] ~20 minutes: Add end-of-July balances and a statement https://github.com/vipulnaik/personal-finances/commit/63b2e881f413ffb935fa70b536a2db34b1084a89 https://github.com/vipulnaik/personal-finances/commit/eb3db3bba7cc0c3e2bb8b8d15e51ddea3bb44da8
-- [x] ~5 minutes: Add a credit report https://github.com/vipulnaik/personal-finances/commit/648bae8edb5ec759850ed5fb9c3bd792c6dcccf7 https://github.com/vipulnaik/personal-finances/commit/e7d5cfaa0931447e9b58418e794a534a3d449e46  
+- [x] ~24 minutes: Add end-of-July balances and a statement https://github.com/vipulnaik/personal-finances/commit/63b2e881f413ffb935fa70b536a2db34b1084a89 https://github.com/vipulnaik/personal-finances/commit/eb3db3bba7cc0c3e2bb8b8d15e51ddea3bb44da8 and later fix contractwork and tax balance https://github.com/vipulnaik/personal-finances/commit/1d429d46f3cd74ef546e2d5358a6c24f6fe45154 https://github.com/vipulnaik/personal-finances/commit/5193823711d5452b07bf5878e88013b7103f21bb
+- [x] ~5 minutes: Add a credit report https://github.com/vipulnaik/personal-finances/commit/648bae8edb5ec759850ed5fb9c3bd792c6dcccf7 https://github.com/vipulnaik/personal-finances/commit/e7d5cfaa0931447e9b58418e794a534a3d449e46
+
+## Personal chores
+
+- [x] ~15 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/00eefb215cd32f3e63582bb8fb180be7b27748bb
+- [x] ~8 minutes: Take out composting, recyclables, and trash
+- [x] ~17 minutes: Heavy laundry including an additional pre-treatment step
+
+## House chores
+
+- [x] ~2 minutes: Check smoke detectors and CO alarm
