--- a/personal-issues/1299.md
+++ b/personal-issues/1299.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2023-08-21
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,7 +8,14 @@ projects:
 milestone:	
 number:	1299
 --
+## Personal finances, income and taxes
+
+- [x] ~8 minutes: Add recent credit reports https://github.com/vipulnaik/personal-finances/commit/0b468a83ef4bfc7febb99406b35550be420d0326
+- [x] ~6 minutes: Take care of some money transfers 
+
 ## Personal chores
 
 - [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/88966ff50d5f587b78f8630d7372acdaaf638d94
+- [x] ~15 minutes: Add summaries for past week https://github.com/vipulnaik/daily-updates/commit/cc245f8fab3d407608f291d75b831799e31212af
+- [x] ~15 minutes: Heavy laundry 
 
