Add summaries for 2023-08-28 and 2023-08-29 and fetch latest personal issues

--- a/personal-issues/1306.md
+++ b/personal-issues/1306.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2023-08-28
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,4 +10,13 @@ number:	1306
 --
 ## Personal finances, income and taxes
 
-- [x] ~1 hour 30 minutes: Continue investigating my tax situation, including some email exchanges, recalculations, and a [Money Stack Exchange question](https://money.stackexchange.com/questions/158164/where-do-i-report-iso-income-with-a-subsequent-disqualifying-disposition-and-wh)
+- [x] ~3 hours 20 minutes: Continue investigating my tax situation, including some email exchanges, recalculations, and a [Money Stack Exchange question](https://money.stackexchange.com/questions/158164/where-do-i-report-iso-income-with-a-subsequent-disqualifying-disposition-and-wh)
+- [x] ~5 minutes: Finish adding week summary https://github.com/vipulnaik/daily-updates/commit/945df9db6c638ceb6aa1a8b14e7c741d87ee3662
+
+## Personal chores
+
+- [x] ~15 minutes: Rice prep
+
+## Other activities
+
+- [x] ~15 minutes: Help a friend navigate some bureaucracy
