Add summaries for 2023-09-01 to 2023-09-03, add week summary, and fetch latest personal issues

--- a/personal-issues/1310.md
+++ b/personal-issues/1310.md
@@ -1,5 +1,5 @@
 title:	Vipul Friday checklist | 2023-09-01
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -12,8 +12,26 @@ number:	1310
 
 ### Groupprops
 
-- [x] ~6 minutes: Reply to an email message related to groupprops
+- [x] ~6 minutes: Reply twice in an email thread related to groupprops
+
+### Monthly stuff
+
+- [x] ~2 minutes: Update month for Wikipedia Views
+- [x] ~8 minutes Update SSL/TLS certificates
+ 
+### Timelines wiki / contract work
+
+- [x] ~40 minutes: Review three timelines; return two with feedback and add tentative pending payment for the third https://github.com/vipulnaik/contractwork/commit/08a55d98df2a63ce09c6f8c2e9d49f529cfb2b2b
+## Personal finances, income and taxes
+
+- [x] ~15 minutes: Add end-of-August balances and make related changes https://github.com/vipulnaik/personal-finances/commit/c5592e609a0d1be10c3e95c428fb01c1417dbe8f
+
+## Personal chores
+
+- [x] ~5 minutes: Add summaries for past two days + month summary https://github.com/vipulnaik/daily-updates/commit/7db34f50b19962302adf7d85dcf3e900f4ae0d5f
+- [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/2d3718b70f48fec0807b3b35d2b4d2b31d707b12 
 
 ## Other activities
 
 - [x] ~50 minutes effective: Have a call
+- [x] ~2 hours 25 minutes: Meet up with somebody in person (plus the walk back and forth)
