Add summaries for week of 2023-09-11 to 2023-09-17 and fetch latest personal issues

--- a/personal-issues/1319.md
+++ b/personal-issues/1319.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2023-09-11
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -10,9 +10,11 @@ number:	1319
 --
 ## Personal finances, income and taxes
 
-- [ ] ~7 minutes so far: Start documenting steps for California state income tax filing
+- [x] ~25 minutes: Start documenting steps for California state income tax filing; do a round of review of the data entered so far
+- [x] ~5 minutes: Save copies of two recent credit reports https://github.com/vipulnaik/personal-finances/commit/3389f61738f75a828d99f1cebf435b43a4b97bf7 
 
 ## Personal chores
 
 - [x] ~1 hour 10 minutes: Meal prep (excluding time multiplexed with work stuff)
-- [x] ~3 minutes: Update a password 
+- [x] ~3 minutes: Update a password
+- [x] ~5 minutes: Add summaries https://github.com/vipulnaik/daily-updates/commit/c23a93d97926833e64da15bd90a26c3bf9889a69 
