Add summaries for period of 2023-10-23 to 2023-10-27 and fetch latest personal issues

--- a/personal-issues/1360.md
+++ b/personal-issues/1360.md
@@ -1,5 +1,5 @@
 title:	Vipul Monday checklist | 2023-10-23
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,12 @@ projects:
 milestone:	
 number:	1360
 --
+## Personal projects
+
+### Timelines wiki (contract work)
+
+- [x] ~10 minutes: Review and add tentative pending payment for timeline of large language models https://github.com/vipulnaik/contractwork/commit/ae4502e54d174a9449611069c64bb1418318d251
 ## Personal chores
 
 - [x] ~10 minutes: Go through some documents
+- [x] ~5 minutes: Add more summaries https://github.com/vipulnaik/daily-updates/commit/a355a7c9e310f207b48c8be465bababe73fef250
