Add summaries for period of 2023-10-28 to 2023-10-30; add week summary; fetch latest personal issues

--- a/personal-issues/1365.md
+++ b/personal-issues/1365.md
@@ -1,5 +1,5 @@
 title:	Vipul Saturday checklist | 2023-10-28
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,18 @@ projects:
 milestone:	
 number:	1365
 --
+## Personal finances, income and taxes
+
+- [x] ~5 minutes: Add two recent credit reports https://github.com/vipulnaik/personal-finances/commit/d3feafb29aa781a3960b564f3760afdf0ee39d23
+
 ## Personal chores
 
 - [x] ~3 minutes: Update moving average threshold logic https://github.com/vipulnaik/daily-updates/commit/21fe0158925d77f2a8c26e8957facaa1684bf60f
+- [x] ~10 minutes: Add summaries for weekdays and fetch latest personal issues https://github.com/vipulnaik/daily-updates/commit/ddfb11b56a00ab62b2d9c984cfbb86b0dc95bba3
+- [x] ~35 minutes: Continue work on https://github.com/vipulnaik/diet-exercise-health/blob/master/notes/health-profile.md
+- [x] ~48 minutes: Potatoes prep (with spinach and peas (just 1 packet); no tomatoes this time)
+- [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/01552222871a78c7321958262ee612259310cf51
+
+## Family planning
+
+- [x] ~4 minutes: Refresh my memory
