Update minutes spent on personal projects for 2023-10-30 based an an update to the daily update; fetch latest personal issues

--- a/personal-issues/1367.md
+++ b/personal-issues/1367.md
@@ -8,6 +8,12 @@ projects:
 milestone:	
 number:	1367
 --
+## Personal projects
+
+### Donations list website (DLW)
+
+- [x] ~2 minutes: Respond to feedback and create vipulnaik/donations#144 based on it
+
 ## Personal chores
 
 - [x] ~2 minutes: Update a health doc
