--- a/personal-issues/1368.md
+++ b/personal-issues/1368.md
@@ -1,5 +1,5 @@
 title:	Vipul Tuesday checklist | 2023-10-31
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -8,6 +8,30 @@ projects:
 milestone:	
 number:	1368
 --
+## Personal projects
+
+### Donations list website (DLW)
+
+- [x] ~15 minutes: Reply to an email; while doing so, fix release month https://github.com/vipulnaik/donations/commit/48634fa12819c25f32ee4116c57c6fd80e13e4bb and make some streamlining changes to improve data loading and reduce downtime for about page during a data reload
+
+### Devops streamlining
+
+- [x] ~8 minutes: Update SSL/TLS certificates
+
 ## Personal chores
 
 - [x] ~5 minutes: Investigate disk space usage
+- [x] ~5 minutes: Add recent day summaries and take related actions https://github.com/vipulnaik/daily-updates/commit/8d5b0ecb7e506dc647114ad21d18cbba31fe0620
+- [x] ~3 minutes: Unpack screwdriver set purchased last year
+- [x] ~15 minutes: Submit October expense report to work (though expense reports are being submitted to work, they are general expenses so I'm counting against personal chores time)
+- [x] ~20 minutes: Take care of administrative steps related to California state ID card
+- [x] ~3 minutes: Review and update a few renewal reminders
+- [x] ~10 minutes: Review a few documents for printing
+- [x] ~15 minutes: Review and edit my trip packing checklist
+- [x] ~25 minutes: Regular laundry including extra dryer trip and extra clothes pickup trip
+- [x] ~45 minutes: Start putting together records of clothes 
+
+## House chores
+
+- [x] ~2 minutes: Deal with loose screw on a doorknob
+- [x] ~3 minutes: Replace dryer lint filter  
