Add summaries for 2023-10-31 to 2023-11-03; add October 2023 month summary; fetch latest personal issues

--- a/personal-issues/1369.md
+++ b/personal-issues/1369.md
@@ -1,5 +1,5 @@
 title:	Vipul Wednesday checklist | 2023-11-01
-state:	OPEN
+state:	CLOSED
 author:	vipulnaik
 labels:	
 comments:	0
@@ -26,6 +26,10 @@ number:	1369
 
 - [x] ~3 minutes: Take care of monthly backups
 
+### Devops streamlining
+
+- [x] ~1 minute: Flag a nginx restart issue
+
 ## Personal finances, income and taxes
 
 - [x] ~32 minutes: Add end-of-October balances; also, review and fix a bunch of other related things https://github.com/vipulnaik/personal-finances/commit/b83f373c06e37e03b85c5e7b6053fc83a87853cd https://github.com/vipulnaik/personal-finances/commit/7fc86e98b31d34c5dcdac3dbcca490a7009eb1e1; later, update to include contractwork payments https://github.com/vipulnaik/personal-finances/commit/cb4dfc716a1fab56d1f0c1f272ae8e8436ced586
@@ -34,7 +38,7 @@ number:	1369
 
 - [x] ~25 minutes: Continue with clothes recording
 - [x] ~10 minutes: Check stocks of supplements and make updated Walgreens shopping list
-- [x] ~20 minutes: Record Walgreens trip https://github.com/vipulnaik/diet-exercise-health/commit/b69cd27f0c0ada5285686815be66cf350ece8885 
+- [x] ~20 minutes: Walgreens trip https://github.com/vipulnaik/diet-exercise-health/commit/b69cd27f0c0ada5285686815be66cf350ece8885 
 - [x] ~55 minutes: Get groceries from Trader Joe's https://github.com/vipulnaik/diet-exercise-health/commit/5c249bd7f5e7385958ee3c5525648d0813755ed5
 
 ## House chores
